replace deprecated URL constructors
Signed-off-by: Rohit Satya <work.rohitsatya@gmail.com>